--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "formik": "^2.4.6",
     "react": "19.0.0",
     "react-native": "0.79.0",
