--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "formik": "^2.4.6",
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-animated-bottom-drawer": "^0.0.23",
+    "react-native-bootsplash": "^6.3.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "yup": "^1.6.1"
   },
