--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-bootsplash": "^6.3.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^5.4.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
