--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.79.0",
     "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-bootsplash": "^6.3.5",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.1",
     "react-native-reanimated": "^3.17.5",
