--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-camera-roll/camera-roll": "^7.10.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-firebase/firestore": "^22.2.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -20,6 +23,7 @@
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-alert-notification": "^0.4.2",
     "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-bootsplash": "^6.3.5",
     "react-native-device-info": "^14.0.4",
