--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "@types/react-native-vector-icons": "^6.4.18",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
@@ -37,7 +38,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "^4.0.3",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
